crates/core-executor/src/tests/sql/ddl/snapshots/table/query_alter_table_if_exists_missing_table_should_pass.snap
---
source: crates/core-executor/src/tests/sql/ddl/table.rs
description: "\"ALTER TABLE IF EXISTS embucket.public.missing_table add column c5 VARCHAR\""
---
Ok(
    [
        "+--------+",
        "| status |",
        "+--------+",
        "+--------+",
    ],
)
