crates/core-executor/src/tests/sql/ddl/snapshots/table/query_alter_table_stub_should_pass.snap
---
source: crates/core-executor/src/tests/sql/ddl/table.rs
description: "\"ALTER TABLE embucket.test.some_table add column c5 VARCHAR\""
info: "Setup queries: CREATE SCHEMA embucket.test; CREATE TABLE embucket.test.some_table (id INT)"
---
Ok(
    [
        "+--------+",
        "| status |",
        "+--------+",
        "+--------+",
    ],
)
