crates/core-executor/src/tests/sql/ddl/snapshots/table/query_create_table_and_insert.snap
---
source: crates/core-executor/src/tests/sql/ddl/table.rs
description: "\"SELECT * FROM embucket.public.test\""
info: "Setup queries: CREATE TABLE embucket.public.test (id INT); INSERT INTO embucket.public.test VALUES (1), (2)"
---
Ok(
    [
        "+----+",
        "| id |",
        "+----+",
        "| 1  |",
        "| 2  |",
        "+----+",
    ],
)
